Bug 1677684 - part 1: Make `ContentCache` manage composition start offset with `Maybe` instead of using a magic number r=m_kato

Currently, it manages the composition start offset with `uint32_t` and setting
it to `UINT32_MAX` when there is no composition.  But this is now rewritable
with `Maybe<uint32_t>` for easier to read.

Differential Revision: https://phabricator.services.mozilla.com/D97838